--- a/cmd/CMakeLists.txt
+++ b/cmd/CMakeLists.txt
@@ -1,5 +1,15 @@
 find_package (OpenCV REQUIRED)
+find_package (Boost REQUIRED)
+find_package (TBB REQUIRED)
 
+include_directories(
+	${Boost_INCLUDE_DIRS}
+    ${OpenCV_INCLUDE_DIRS}
+    ${TBB_INCLUDE_DIRS}
+)
+link_directories(
+    ${OpenCV_LIB_DIR}
+)
 add_executable (
     pupiltrackercmd
 
@@ -11,5 +21,5 @@ target_link_libraries(
 
     pupiltracker
     ${OpenCV_LIBS}
-    tbb
+    ${TBB_LIBRARIES}
 )
