Fix include paths/cmake include directories for cmd demo

--- a/cmd/CMakeLists.txt
+++ b/cmd/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(
     ${Boost_INCLUDE_DIRS}
     ${OpenCV_INCLUDE_DIRS}
     ${TBB_INCLUDE_DIRS}
+    ${pupiltracker_SOURCE_DIR}/lib
 )
 link_directories(
     ${OpenCV_LIB_DIR}
