Add installation and debug postfix

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -19,3 +19,9 @@ include_directories(
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}    
 )
+
+install(TARGETS pupiltracker
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib)
+install(DIRECTORY pupiltracker
+        DESTINATION include)
